add login,  register,  profile

--- a/src/app/component/category/add-category/add.component.html
+++ b/src/app/component/category/add-category/add.component.html
@@ -11,7 +11,7 @@
       <form [formGroup]="categoryForm" (ngSubmit)="addCategory()" >
         <div class="modal-body">
           <div class="input-group mb-3">
-            <input type=color value="{{color}}" formControlName="color">
+            <input type="color" value="{{color}}" formControlName="color">
             <input type="text" class="form-control" placeholder="Tên loại" aria-label="Username"
                    aria-describedby="basic-addon1" style="margin-left: 17px" formControlName="name">
           </div>
