--- a/src/app/component/wallet/detail/detail.component.html
+++ b/src/app/component/wallet/detail/detail.component.html
@@ -65,7 +65,7 @@
               <img src="https://static.moneylover.me/img/flag/ic_currency_vnd.png"
                    style="width: 20px;height: 20px; margin-right: 4px">
               <label class="form-check-label" for="flexRadioDefault1">
-                Việt Nam Đồng
+                VND
               </label>
             </div>
             <div class="form-check" style="margin-left: 50px">
