--- a/src/app/share/nav-bar/nav-bar.component.html
+++ b/src/app/share/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
           <div class="header_notification_warp d-flex align-items-center">
           </div>
           <div class="profile_info">
-            <img src="{{image}}" style="width: 60px;height: 60px">
+            <img src="{{image}}" style="width: 60px;height: 60px" (click) =  "directProfile()" >
           </div>
         </div>
       </div>
