--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -5,10 +5,10 @@
     <div class="row">
       <div class="col-6">
         <div class="tab">
-          <button class="tablinks-chart" onclick="openCityChart(event, 'chart-collect')" style="width: 50%">Biểu
-            đồ thu
+          <button class="tablinks-chart labelChart" onclick="openCityChart(event, 'chart-collect')" style="border: 1px solid #d0e1ef;width: 50%">
+            Biểu đồ thu
           </button>
-          <button class="tablinks-chart" onclick="openCityChart(event, 'chart-spend')" style="width: 50%"
+          <button class="tablinks-chart labelChart" onclick="openCityChart(event, 'chart-spend')" style="border: 1px solid #d0e1ef; width: 50%"
                   id="defaultOpen">Biểu đồ chi
           </button>
         </div>
