--- a/src/app/component/login/add-first-wallet/add-first-wallet.component.html
+++ b/src/app/component/login/add-first-wallet/add-first-wallet.component.html
@@ -1,14 +1,11 @@
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+<div class="modal fade" id="addFirst" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">Thêm Ví</h5>
-        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
-      <form [formGroup]="walletForm" (ngSubmit)="addWallet()">
+      <form [formGroup]="firstWalletForm" (ngSubmit)="addFirstWallet()" >
         <div class="modal-body">
           <div class="input-group mb-3">
             <a data-bs-toggle="modal" data-bs-target="#exampleModal"><span
@@ -16,15 +13,14 @@
               src="{{icon}}" style="width: 30px;height: 30px"></span></a>
             <div class="input-group-item">
               <input type="text" class="form-control input-form" placeholder="Tên ví" aria-label="Username"
-                     aria-describedby="basic-addon1" style="margin-left: 10px; margin-bottom: 25px" formControlName="name">
+                     aria-describedby="basic-addon1" style="margin-left: 10px;  margin-bottom: 25px" formControlName="name">
               <input type="text" class="form-control input-form" placeholder="Hạn mức" aria-label="MoneyAmount"
                      aria-describedby="basic-addon1" style="margin-left: 10px" formControlName="moneyAmount">
             </div>
           </div>
           <div class="input-group mb-3" style="margin-top: 30px;margin-left: 15%">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="moneyType" id="flexRadioDefault1" value="1"
-                     formControlName="moneyType">
+              <input class="form-check-input" type="radio" name="moneyType" id="flexRadioDefault1"  value="1" formControlName="moneyType" >
               <img src="https://static.moneylover.me/img/flag/ic_currency_vnd.png"
                    style="width: 20px;height: 20px; margin-right: 4px">
               <label class="form-check-label" for="flexRadioDefault1">
@@ -32,8 +28,7 @@
               </label>
             </div>
             <div class="form-check" style="margin-left: 50px">
-              <input class="form-check-input" type="radio" name="moneyType" id="flexRadioDefault2" checked value="2"
-                     formControlName="moneyType">
+              <input class="form-check-input" type="radio" name="moneyType" id="flexRadioDefault2" checked value="2" formControlName="moneyType">
               <img src="https://static.moneylover.me/img/flag/ic_currency_usd.png"
                    style="width: 20px;height: 20px; margin-right: 5px">
               <label class="form-check-label" for="flexRadioDefault2">
@@ -43,10 +38,7 @@
           </div>
         </div>
         <div>
-          <button type="submit" class="btn_1 btn btn-primary"
-                  style="background: #4694e1; margin-left: 80%; margin-bottom: 10px" data-bs-dismiss="modal"
-                  aria-label="Close">Thêm
-          </button>
+          <button type="submit" class="btn_1 btn btn-primary" style="background: #4694e1; margin-left: 80%; margin-bottom: 10px" data-bs-dismiss="modal" aria-label="Close">Thêm</button>
         </div>
       </form>
     </div>
@@ -139,3 +131,5 @@
     </div>
   </div>
 </div>
+<a id="showModal" data-bs-toggle="modal"
+   data-bs-target="#addFirst"></a>
