--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -14,9 +14,9 @@
                   <div class="modal-body">
                     <div class="row social_login_btn">
                       <div class="form-group col-md-12 text-center">
-<!--                        <button class="btn_1 full_width" (click)="signInWithFB()"><i class="fab fa-facebook-square"></i>Đăng-->
-<!--                          nhập với facebook-->
-<!--                        </button>-->
+                        <button class="btn_1 full_width" (click)="signInWithFB()"><i class="fab fa-facebook-square"></i>Đăng
+                          nhập với facebook
+                        </button>
                       </div>
                     </div>
                     <div class="border_style">
