--- a/src/app/component/category/show-category/show.component.html
+++ b/src/app/component/category/show-category/show.component.html
@@ -29,7 +29,7 @@
                 </thead>
                 <tbody *ngFor="let category of categories|paginate: { itemsPerPage: 7, currentPage: p, totalItems: total }; let i = index;">
                 <tr style="text-align: center">
-                  <td scope="row"><a href="#" class="question_content">{{category.name}}</a></td>
+                  <td scope="row"><a class="question_content">{{category.name}}</a></td>
                   <td>{{category.note}}</td>
                   <td *ngIf="category.status == '1'" style="color: rgba(0,0,0,0.68); size: 3px">Thu</td>
                   <td *ngIf="category.status == '2'" style="color: rgba(0,0,0,0.68); size: 3px">Chi</td>
